--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.1",
+    "twilio": "^3.39.5",
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
